--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "chance": "^1.0.9",
     "move-js": "^0.5.0",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
